@@ -14,7 +14,7 @@
 #undef APSTUDIO_READONLY_SYMBOLS
 
 /////////////////////////////////////////////////////////////////////////////
-// Englisch (USA) resources
+// English (U.S.) resources
 
 #if !defined(AFX_RESOURCE_DLL) || defined(AFX_TARG_ENU)
 #ifdef _WIN32
@@ -1991,6 +1991,7 @@ BEGIN
     POPUP "&Table"
     BEGIN
         MENUITEM "&Play\tF5",                   ID_TABLE_PLAY
+        MENUITEM "Camera M&ode",                ID_TABLE_CAMERAMODE
         MENUITEM SEPARATOR
         MENUITEM "&Table Info...",              ID_TABLE_TABLEINFO
         MENUITEM "&Sound Manager...\tF2",       ID_TABLE_SOUNDMANAGER
@@ -2414,7 +2415,7 @@ BEGIN
     IDS_STEP                "Step"
 END
 
-#endif    // Englisch (USA) resources
+#endif    // English (U.S.) resources
 /////////////////////////////////////////////////////////////////////////////
 
 
